--- a/ILovePizza/package.json
+++ b/ILovePizza/package.json
@@ -1,13 +1,29 @@
 {
     "private": true,
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "development": "mix",
+        "watch": "mix watch",
+        "prod": "mix --production"
     },
     "devDependencies": {
+        "@babel/core": "^7.23.7",
+        "@babel/preset-env": "^7.23.7",
         "axios": "^1.1.2",
+        "babel-loader": "^9.1.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.69.7",
+        "sass-loader": "^12.6.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.2",
+        "bootstrap-icons": "^1.11.3",
+        "datatables.net-bs4": "^1.13.8",
+        "jquery": "^3.7.1"
     }
 }
