Modifiche layout generale e creazione view user

--- a/ILovePizza/public/mix-manifest.json
+++ b/ILovePizza/public/mix-manifest.json
@@ -1,4 +1,8 @@
 {
     "/js/pagination.js": "/js/pagination.js",
-    "/js/app.js": "/js/app.js"
+    "/js/app.js": "/js/app.js",
+    "/css/bootstrap.min.css": "/css/bootstrap.min.css",
+    "/js/bootstrap.bundle.min.js": "/js/bootstrap.bundle.min.js",
+    "/js/bootstrap.bundle.min.js.map": "/js/bootstrap.bundle.min.js.map",
+    "/css/bootstrap.min.css.map": "/css/bootstrap.min.css.map"
 }
