--- a/ILovePizza/package.json
+++ b/ILovePizza/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -11,13 +11,18 @@
     "devDependencies": {
         "@babel/core": "^7.23.7",
         "@babel/preset-env": "^7.23.7",
+        "@tailwindcss/forms": "^0.5.2",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
         "babel-loader": "^9.1.3",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.31",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.69.7",
         "sass-loader": "^12.6.0",
+        "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
