--- a/ILovePizza/.env
+++ b/ILovePizza/.env
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=ILovePizza
+DB_USERNAME=ILovePizza
+DB_PASSWORD=ILovePizza
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=b4104ef86a3f9b
+MAIL_PASSWORD=a96816379022a9
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="danilo.ivone.18@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
