--- a/ILovePizza/composer.json
+++ b/ILovePizza/composer.json
@@ -6,14 +6,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "andcarpi/laravel-popper": "^0.9.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/laravel-permission": "^6.3",
         "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.28",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
