--- a/ILovePizza/composer.json
+++ b/ILovePizza/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "rtconner/laravel-tagging": "^4.1",
         "spatie/laravel-permission": "^6.3",
         "twbs/bootstrap-icons": "^1.11"
     },
