--- a/ILovePizza/.env
+++ b/ILovePizza/.env
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME='danilo.ivone.30@gmail.com'
+MAIL_PASSWORD='xzel nwhn zpky xbtf'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="danilo.ivone.30@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
