--- a/ILovePizza/composer.json
+++ b/ILovePizza/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/scout": "^10.8",
         "laravel/tinker": "^2.8",
+        "rtconner/laravel-likeable": "^3.2",
         "rtconner/laravel-tagging": "^4.1",
         "spatie/laravel-permission": "^6.3",
         "teamtnt/laravel-scout-tntsearch-driver": "^13.2",
