--- a/ILovePizza/composer.json
+++ b/ILovePizza/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "andcarpi/laravel-popper": "^0.9.4",
+        "beyondcode/laravel-comments": "^1.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
